--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,4 @@
-SimpleMash v1.0.15 RC3
+SimpleMash v1.0.17 RC3
 J.Rocela (me@iamjamoy.com)
 
 1.0.5 Initial Release
@@ -28,3 +28,7 @@ J.Rocela (me@iamjamoy.com)
 	Implemented Yahoo! Answers integration.
 	Removed Double Aggregation
 	Fixed option checkboxes.
+1.0.16 RC3
+	Added condition to prevent double publication
+1.0.17 RC3
+	Testing the New Simplemash Logic
